--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body><h1>Un super titre</h1>
+<body><h1>Un super titre!</h1>
 </body>
 </html>
